--- a/landing-1/index.html
+++ b/landing-1/index.html
@@ -49,7 +49,7 @@
 									<ul>
 										<li>
 											<label class="quiz__label">
-												<input type="radio" name="question1" value="1" checked>
+												<input type="radio" name="question1" value="1" >
 												<span class="quiz__circle"></span>
 												<span class="quiz__text">Название магазина</span>
 											</label>
@@ -91,7 +91,7 @@
 									<ul>
 										<li>
 											<label class="quiz__label">
-												<input type="radio" name="question2" value="1" checked>
+												<input type="radio" name="question2" value="1" >
 												<span class="quiz__circle"></span>
 												<span class="quiz__text">Название магазина2</span>
 											</label>
@@ -133,7 +133,7 @@
 									<ul>
 										<li>
 											<label class="quiz__label">
-												<input type="radio" name="question3" value="1" checked>
+												<input type="radio" name="question3" value="1" >
 												<span class="quiz__circle"></span>
 												<span class="quiz__text">Название магазина3</span>
 											</label>
@@ -175,7 +175,7 @@
 									<ul>
 										<li>
 											<label class="quiz__label">
-												<input type="radio" name="question4" value="1" checked>
+												<input type="radio" name="question4" value="1" >
 												<span class="quiz__circle"></span>
 												<span class="quiz__text">Название магазина4</span>
 											</label>
@@ -217,7 +217,7 @@
 									<ul>
 										<li>
 											<label class="quiz__label">
-												<input type="radio" name="question5" value="1" checked>
+												<input type="radio" name="question5" value="1" >
 												<span class="quiz__circle"></span>
 												<span class="quiz__text">Название магазина5</span>
 											</label>
@@ -253,7 +253,7 @@
 									</ul>
 								</div>
 							</div>
-							<button type="button" class="btn pulse quiz__btn">
+							<button type="button" class="btn pulse quiz__btn is-disabled">
 								<span>Далее</span>
 							</button>
 						</form>
