--- a/landing-4/index.html
+++ b/landing-4/index.html
@@ -36,6 +36,9 @@
 						<div class="timer">
 							<div id="flipdown" class="flipdown"></div>
 						</div>
+						<div class="home__img">
+							<img src="img/home-bg.png" width="342" height="177" alt="">
+						</div>
 					</div>
 				</div>
 				<div class="app__screen app__screen--2 call is-hide">
