--- a/landing-4/index.html
+++ b/landing-4/index.html
@@ -22,7 +22,7 @@
 					<div class="container">
 						
 						<div class="title">Участвуй в розыгрыше
-						<span>Iphone 14 pro max</span></div>
+						<span>Iphone&nbsp;14&nbsp;pro&nbsp;max</span></div>
 						<div class="home__caption">введи номер телефона <br>
 						для участия</div>
 						<div class="phone-field">
